--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,9 @@ bin/
 
 
 # End of https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
+
+.gradle/
+.vscode/
+.wpilib/
+build/
+gradle/
